feat(stock-transaction): add stock transaction support
